2004-06-15  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-view.c (emfv_init): Changed the second
	gtk_selection_add_target() to use GDK_SELECTION_CLIPBOARD rather
	than GDK_SELECTION_PRIMARY again. This should fix bug #60022.

2004-06-14  Radek Doulik  <rodo@ximian.com>

	* em-mailer-prefs.c (em_mailer_prefs_construct): the check button
	label has now opposite meaning (after UI changes), call
	toggle_button_init with 'not' parameter set to TRUE
	(toggle_button_toggled_not): new helper function, sets negative
	value to gconf bool key

2004-06-14  Not Zed  <NotZed@Ximian.com>

	* mail-vfolder.c (rule_changed): don't check rule->source, its
	irrelevent to vfolder sources, and clean up the logic a bit.
	#59158.

	* em-folder-tree.c (emft_popup_new_folder_response): destroy the
	create dialogue if we're firing up the vfolder creation window.

	* em-composer-utils.c (get_reply_all): if we removed all of the
	addresses because they were 'us', add the first to
	address back.  otherwise reply-to-all behaves strange.

2004-06-11  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.c (em_folder_tree_set_selected): Free any old
	select_uri string we may have.
	(emft_tree_row_expanded): Remove the gross hack that was here.
	(emft_get_folder_info__got): Check for priv->select_uri and try
	selecting it (if we can't select it yet, it'll just be re-queued
	for later).
	(emft_tree_row_activated): Clear the select_uri if set, the user's
	selection overrules any auto-selection.
	(emft_tree_selection_changed): Same.

2004-06-11  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_tree_button_press): rearrange the setting
	up of the target flags, stores can have a null path.

	* em-folder-selector.c (emfs_create_name_changed): use
	get_selected_uri rather than path.  a valid uri may have a null
	path now.
	(emfs_create_name_activate): and here too.
	(em_folder_selector_get_selected_path): check the uri is null for
	a selected path, and then handle a null path.
